cassandra/3.1/modules/ROOT/pages/cassandra-connector-config-topics.adoc
= Additional Cassandra Configuration - Mule 4

Configure Anypoint Connector for Cassandra to work in your environment with basic authentication and DataSense functionality.

== Enable Cassandra Authentication

By default, accessing the Cassandra database does not require credentials.
You need to configure Cassandra to enable authentication. The Cassandra connector configuration must match the Cassandra configuration for basic authentication.

After enabling authentication, run the `cqlsh` command from the Cassandra installation home directory as shown in this example, which uses
default credentials with username `cassandra` and password `cassandra`:

[source,text,linenums]
----
bin/cqlsh localhost -u cassandra -p cassandra
Connected to Test Cluster at localhost:9042.
[cqlsh 5.0.1 | Cassandra 3.10 | CQL spec 3.4.4 | Native protocol v4]
Use HELP for help.
----

. After installing Cassandra, open the `conf\cassandra.yaml` file for editing.
. Optionally, change the value of `AllowAllAuthenticator` to `PasswordAuthenticator`.
. Restart Cassandra.
. In a separate terminal tab, verify that Cassandra is running:
+
`bin/nodetool status`

== POJO Configuration

The connector exposes multiple operations in the Cassandra Connector Reference.
The below operations accept some POJOs as input parameters, which are needed for the DataSense functionality:

`addNewColumn`, `changeColumnType`, `createKeyspace`, `createTable`, `deleteColumnsValue`, `deleteRows`, `dropColumn`, `dropKeyspace`, `dropTable`, `executeCQLQuery`, `getTableNamesFromKeyspace`, `renameColumn`, `select`, and `update`.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
